<resources>
    <string name="app_name">ChatApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="contact">CONTACT</string>
    <string name="chat">CHAT</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">SIGN IN </string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="type_message">Type a message</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="room">ROOM</string>
    <string name="action_search">search</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="save_password">Save password</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="no_internet">No internet</string>
    <string name="reload">Reload</string>
    <string name="hint_new_password">New password</string>
    <string name="btn_upload_info">Update Information</string>
    <string name="providing_information">Providing your email to get your password</string>
    <string name="get_password">Have you forgotten your password yet ? Click here to get password</string>
    <string name="back">Back</string>
    <string name="forgetting_password">Forgetting Password</string>
    <string name="progressdialog">Sending Email ...</string>
    <string name="save_changed">Save changed</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="getting_password">Get password</string>
</resources>
