<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9">

    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:src="@drawable/logo_facebook"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/forgetting_password"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_size_15"
        android:layout_gravity="center"
        android:text="@string/providing_information"
        android:textColor="@android:color/black"
        android:textSize="14dp"/>

    <EditText
        android:background="@color/white"
        android:id="@+id/email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_size_8"
        android:layout_marginLeft="@dimen/common_size_15"
        android:layout_marginRight="@dimen/common_size_15"
        android:layout_weight="1"
        android:hint="Email"
        android:paddingLeft="15dp"
        android:textColorHint="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_size_15"
        android:layout_marginRight="@dimen/common_size_15"
        android:layout_marginTop="@dimen/common_size_15"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/get_password"
        android:textAllCaps="false"
        android:textSize="@dimen/common_text_size_8"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/back"
        android:textAllCaps="false"/>
</LinearLayout>
