<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        ​

        <TextView
            android:id="@+id/text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/common_size_30"
            android:gravity="center_horizontal"
            android:text="Chat++"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_size_50"/>
        ​

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            ​

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
            ​
        </android.support.design.widget.TextInputLayout>
        ​

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
            ​
        </android.support.design.widget.TextInputLayout>
        ​

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_20"
            android:background="@color/colorAccent"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size_4"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_15"
            android:background="@color/colorAccent"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        ​

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_20"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>
        ​

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"/>

            <TextView
                android:textSize="@dimen/common_text_size_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_password"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/common_size_20"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size_7"
            android:background="@null"
            android:text="@string/get_password"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>
    ​

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/common_size_30"
        android:layout_height="@dimen/common_size_30"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/common_size_20"
        android:visibility="gone"/>

</LinearLayout>
