<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_update_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/common_size_100"
                android:layout_height="@dimen/common_size_100"
                android:layout_gravity="bottom"
                android:src="@drawable/avatar_default"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/common_size_10"
                android:layout_marginLeft="@dimen/common_size_15"
                android:layout_marginRight="@dimen/common_size_15"
                android:layout_weight="1"
                android:hint="@string/user_name"
                android:paddingLeft="@dimen/common_size_15"
                android:textColorHint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/common_size_10"
                android:layout_marginLeft="@dimen/common_size_15"
                android:layout_marginRight="@dimen/common_size_15"
                android:layout_weight="1"
                android:hint="@string/password"
                android:paddingLeft="@dimen/common_size_15"
                android:textColorHint="@color/colorPrimary"/>

            <Button
                android:id="@+id/button_change"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/common_size_15"
                android:layout_marginRight="@dimen/common_size_15"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/save_changed"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/back"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
